--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,10 @@
 @import url('../assets/fonts/museo.css');
 @import url('./story.css');
 
+:root {
+  --background-color: #251319;
+}
+
 body {
   height: 100vh;
   overscroll-behavior: none;
@@ -9,6 +13,20 @@ body {
 }
 
 #wanned {
-  background: black;
+  background-color: var(--background-color);
   display: block;
+}
+
+#fog {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0.1) 0%,
+    rgba(255, 255, 255, 0.3) 80%
+  );
 }
