--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,41 @@ body {
   left: 0;
   background: radial-gradient(
     circle,
-    rgba(0, 0, 0, 0.1) 0%,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(255, 0, 0, 0.15) 80%
+  );
+  transform: scale(1);
+  opacity: 1;
+  filter: blur(10px);
+  transition-property: transform, opacity;
+  transition: 500ms ease-out;
+}
+
+#fog.hidden {
+  transform: scale(5);
+  opacity: 0;
+}
+
+#light {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background: white;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0) 0%,
     rgba(255, 255, 255, 0.3) 80%
   );
+  border-radius: 50%;
+  filter: blur(40px);
+  opacity: 1;
+  transition: opacity 500ms ease-out;
+}
+
+#light.hidden {
+  opacity: 0;
 }
