feat: show baptiste's life

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 @import url('https://files.bdph.me/reset.css');
 @import url('../assets/fonts/museo.css');
 @import url('./story.css');
+@import url('./hud.css');
 
 :root {
   --background-color: #251319;
@@ -15,7 +16,7 @@ body {
 #wanned {
   background-color: var(--background-color);
   display: block;
-  
+
 }
 
 #fog {
