--- a/css/index.css
+++ b/css/index.css
@@ -4,123 +4,127 @@
 @import url('./hud.css');
 
 :root {
-  --background-color: #251319;
+    --background-color: #251319;
 }
 
 body {
-  height: 100vh;
-  overscroll-behavior: none;
-  font-family: 'Museo', sans-serif;
+    height: 100vh;
+    overscroll-behavior: none;
+    font-family: 'Museo', sans-serif;
 }
 
 #wanned {
-  background-color: var(--background-color);
-  display: block;
+    background-color: var(--background-color);
+    display: block;
 
 }
 
 #fog {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background: radial-gradient(
-    circle,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0.9) 70%
-  );
-  opacity: 1;
-  transition: opacity 500ms ease-out;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background: radial-gradient(
+            circle,
+            rgba(0, 0, 0, 0) 0%,
+            rgba(0, 0, 0, 0.9) 70%
+    );
+    opacity: 1;
+    transition: opacity 500ms ease-out;
 }
 
 #fog.hidden {
-  opacity: 0;
+    opacity: 0;
 }
 
 #light {
-  position: absolute;
-  width: 200px;
-  height: 200px;
-  background: white;
-  z-index: 1;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: radial-gradient(
-    circle,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(255, 255, 255, 0.3) 80%
-  );
-  border-radius: 50%;
-  filter: blur(40px);
-  opacity: 1;
-  transition: opacity 500ms ease-out;
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    background: white;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: radial-gradient(
+            circle,
+            rgba(0, 0, 0, 0) 0%,
+            rgba(255, 255, 255, 0.3) 80%
+    );
+    border-radius: 50%;
+    filter: blur(40px);
+    opacity: 1;
+    transition: opacity 500ms ease-out;
 }
 
 #light.hidden {
-  opacity: 0;
+    opacity: 0;
 }
 
-.TextDialogue{
-  display: flex;
-  flex-direction: column-reverse;
-  align-items: stretch;
-  justify-content: center;
-  gap: 10px;
-  transform: translateX(-50%);
-  position: absolute;
-  width: 50%;
-  max-width: 70ch;
-  left: 50%;
-  bottom: 0;
-  padding: 4px;
-  z-index: 2;
-  margin: auto 0;
-  user-select: none;
+.textDialogue {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: stretch;
+    justify-content: center;
+    gap: 10px;
+
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    z-index: 2;
+
+    transform: translateX(-50%);
+
+    width: 50%;
+    max-width: 70ch;
+
+    padding: 4px;
+    margin: auto 0 1rem;
+
+    user-select: none;
 }
 
-.TextContent{
-  box-sizing: border-box;
-  background-color: white;
-  color: #251319;
-  
-  padding: 40px;
-  border-radius: 15px;
-  box-shadow: inset 0px 0px 0px 5px #fff, inset 0px 0px 0px 7px #000;
+.textContent {
+    box-sizing: border-box;
+    background-color: white;
+    color: #251319;
+
+    padding: 40px;
+    border-radius: 15px;
+    box-shadow: inset 0 0 0 5px #fff, inset 0 0 0 7px #000;
 
 }
 
-.TextDialogue p {
-  margin: 0;
-  font-size: 1.5rem;
+.textDialogue p {
+    margin: 0;
+    font-size: 1.5rem;
 }
 
-.choicesElement{
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  align-self: flex-end;
-  align-items: flex-start;
-  padding: 20px;
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: inset 0px 0px 0px 5px #fff,
-  inset 0px 0px 0px 7px #000;
+.choicesElement {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-self: flex-end;
+    align-items: flex-start;
+
+    padding: 20px;
+    border-radius: 10px;
+
+    background-color: white;
+    box-shadow: inset 0 0 0 5px #fff, inset 0 0 0 7px #000;
 }
 
-.choicesElement li:hover{
-  text-decoration: underline;
+.choicesElement li:hover {
+    text-decoration: underline;
 }
 
-
-
-.choicesElement li{
-  cursor: pointer;
+.choicesElement li {
+    cursor: pointer;
 }
 
-.TextDialogue.hide{
-  display: none;
+.textDialogue.hide {
+    display: none;
 }
 
