--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,18 @@ body {
   display: block;
 }
 
+@keyframes damages {
+  0% {
+    filter: brightness(0);
+  }
+  20% {
+    filter: brightness(0.5);
+  }
+  100% {
+    filter: brightness(0);
+  }
+}
+
 #fog {
   position: absolute;
   width: 100%;
@@ -29,10 +41,16 @@ body {
   background: radial-gradient(
     circle,
     rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0.9) 70%
+    rgba(255, 0, 0, 0.9) 70%
+    /*rgba(0, 0, 0, 0.9) 70%*/
   );
   opacity: 1;
+  filter: brightness(0);
   transition: opacity 500ms ease-out;
+}
+
+#fog.damages {
+  animation: damages 2000ms linear;
 }
 
 #fog.hidden {
