--- a/css/index.css
+++ b/css/index.css
@@ -42,8 +42,7 @@ body {
   background: radial-gradient(
     circle,
     rgba(0, 0, 0, 0) 0%,
-    rgba(255, 0, 0, 0.9) 70%
-    /*rgba(0, 0, 0, 0.9) 70%*/
+    rgba(255, 0, 0, 0.9) 70% /*rgba(0, 0, 0, 0.9) 70%*/
   );
   opacity: 1;
   filter: brightness(0);
@@ -146,7 +145,7 @@ body {
   display: none;
 }
 
-.bubbleContainer{
+.bubbleContainer {
   overflow: hidden;
   user-select: none;
   cursor: crosshair;
@@ -157,12 +156,11 @@ body {
   bottom: 50%;
   left: 25%;
   z-index: 2;
-  
 
   transform: translateY(50%);
 }
 
-.score{
+.score {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -170,13 +168,13 @@ body {
   margin-top: 20px;
 }
 
-.bubbleContainer h3{
+.bubbleContainer h3 {
   font-size: 3rem;
   text-align: center;
   color: white;
 }
 
-.counterDisplay{
+.counterDisplay {
   text-align: center;
   font-size: 3rem;
   color: white;
@@ -190,7 +188,6 @@ body {
   animation: anim 8s forwards;
   filter: hue-rotate(0deg);
   z-index: 99;
-
 }
 
 @keyframes anim {
@@ -201,7 +198,7 @@ body {
   }
 }
 
-.game-over{
+.game-over {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -211,20 +208,19 @@ body {
   height: 100vh;
   width: 100vw;
   z-index: 101;
-  background-color: rgba(0, 0, 0,0.65);
+  background-color: rgba(0, 0, 0, 0.65);
   backdrop-filter: blur(4px);
   animation: opacity 0.5s ease-out;
 }
 
-.game-over h2{
+.game-over h2 {
   text-align: center;
   color: red;
   font-size: 6rem;
-  font-family: 'Press Start 2P',
-  cursive;
+  font-family: 'Press Start 2P', cursive;
 }
 
-.button-container{
+.button-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -234,34 +230,39 @@ body {
   height: 30%;
 }
 
-.button-container button{
+.button-container button {
   height: 40%;
   color: white;
   text-align: center;
   border: 4px solid white;
   font-size: 2rem;
-  font-family: 'Press Start 2P',
-  cursive;
+  font-family: 'Press Start 2P', cursive;
   cursor: pointer;
   transition: transform 0.4s ease;
 }
 
-.button-container button:hover{
+.button-container button:hover {
   transform: scale(1.05);
-  color: #FDEA4F;
-  border: 4px solid #FDEA4F;
+  color: #fdea4f;
+  border: 4px solid #fdea4f;
 }
-.button-container .quit:hover{
+.button-container .quit:hover {
   color: red;
   border: 4px solid red;
 }
 
 @keyframes opacity {
-  from{
+  from {
     opacity: 0;
   }
-  to{
+  to {
     opacity: 1;
   }
 }
 
+@keyframes fade-bubbles-out {
+  to {
+    transform: translate3d(0, -100%, 0);
+    opacity: 0;
+  }
+}
