--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@
 @import url('./game-over.css');
 @import url('./text-dialog.css');
 @import url('./load-screen.css');
+@import url('./menu.css');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 :root {
