--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,9 @@
+:root {
+    --menu-bg-position-start:0;
+    --menu-bg-position-end:100;
+    
+}
+
 .menu {
     position: absolute;
     width: 100vw;
@@ -12,17 +18,32 @@
     font-family: 'Press Start 2P',
     cursive;
     color: white;
-    display: none;
-    
+    visibility: hidden;
+    pointer-events: none;
+
+    opacity: 0;
+    transition: opacity 0.5s ease;
+
+}  
+
+.menu.show {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    background-image: url('../assets/images/anim_background.png');
+    background-size: 200%;
+    animation: bg-animation 5s infinite;
+
 }
 
-.menu .show {
-    display: block;
+@keyframes bg-animation {
+    0% {background-position: var(--menu-bg-position-start)}
+    100% {background-position: var(--menu-bg-position-end)}
 }
-
 
 h1 {
     font-size: 10rem;
+    margin: 3rem;
 
 }
 .launch, .settings, .credits, .quit {
@@ -33,8 +54,9 @@ h1 {
     height: 1rem;
     background-color: white;
     color: black;
-    margin: 2rem;
-padding: 2rem;
+    font-size: 0.75rem;
+    margin: 1rem;
+padding: 2.5rem;
 }
 
 .launch:hover, .settings:hover, .credits:hover, .quit:hover {
