--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,7 @@ body {
 #wanned {
   background-color: var(--background-color);
   display: block;
+  image-rendering: pixelated;
 }
 
 @keyframes damages {
