--- a/css/menu.css
+++ b/css/menu.css
@@ -31,6 +31,7 @@
     visibility: visible;
     pointer-events: auto;
     background-image: url('../assets/images/anim_background.png');
+    image-rendering: pixelated;
     background-size: 200%;
     animation: bg-animation 5s infinite;
 
