--- a/css/game-over.css
+++ b/css/game-over.css
@@ -38,6 +38,20 @@
 
 .button-container button {
   background-color: transparent;
+  height: 7rem;
+  color: white;
+  border: 4px solid white;
+  font-size: 2rem;
+  font-family: 'Press Start 2P', cursive;
+  transition: transform 0.4s ease;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+  margin: 2rem;
+  padding: 2rem;
+  /* background-color: transparent;
   height: 40%;
   color: white;
   text-align: center;
@@ -45,7 +59,7 @@
   font-size: 2rem;
   font-family: 'Press Start 2P', cursive;
   transition: transform 0.4s ease;
-  padding: 0;
+  padding: 0; */
 }
 
 .button-container button:hover {
