--- a/css/game-over.css
+++ b/css/game-over.css
@@ -13,14 +13,14 @@
   animation: game-over-appearing 0.5s ease-out;
 }
 
-.title.title-red {
+.title-end-screen.title-red {
   color: red;
 }
-.title.title-green {
+.title-end-screen.title-green {
   color: green;
 }
 
-.title {
+.title-end-screen {
   text-align: center;
   font-size: 6rem;
   font-family: 'Press Start 2P', cursive;
@@ -32,7 +32,7 @@
   justify-content: center;
   margin-top: 100px;
   gap: 30px;
-  width: 30%;
+  width: fit-content;
   height: 30%;
 }
 
@@ -49,7 +49,7 @@
   justify-content: center;
   align-items: center;
   width: 400px;
-  margin: 2rem;
+  /* margin: 2rem; */
   padding: 2rem;
   /* background-color: transparent;
   height: 40%;
