refactor: clean menu.css

--- a/css/index.css
+++ b/css/index.css
@@ -14,8 +14,9 @@
   --background-color: #251319;
 }
 
-body {
+html, body {
   height: 100vh;
+  width: 100vw;
   overscroll-behavior: none;
   font-family: 'Museo', sans-serif;
   cursor: none;
