--- a/css/menu.css
+++ b/css/menu.css
@@ -52,6 +52,10 @@
   font-size: 10rem;
 }
 
+.menu button {
+  font-size: 2rem;
+}
+
 .menu-buttons {
   display: flex;
   justify-content: center;
@@ -74,8 +78,6 @@
 
   color: white;
   border: 4px solid white;
-
-  font-size: 2rem;
 
   transition: transform 0.4s ease;
 
@@ -107,6 +109,11 @@
   width: 50%;
 
   padding: 1rem;
+}
+
+.confirm-container p {
+  font-size: 3rem;
+  text-align: center;
 }
 
 .confirm-container.hide {
