refactor: css menu and game over

--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@
 @import url('./text-dialog.css');
 @import url('./load-screen.css');
 @import url('./menu.css');
+@import url('./screen-choices.css');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 :root {
