--- a/css/game-over.css
+++ b/css/game-over.css
@@ -1,67 +1,3 @@
-.game-over {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  height: 100vh;
-  width: 100vw;
-  z-index: 101;
-  background-color: rgba(0, 0, 0, 0.65);
-  backdrop-filter: blur(4px);
-  animation: game-over-appearing 0.5s ease-out;
-}
-
-.title-end-screen.title-red {
-  color: red;
-}
-
-.title-end-screen.title-green {
-  color: green;
-}
-
-.title-end-screen {
-  text-align: center;
-  font-size: 6rem;
-}
-
-.button-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 100px;
-  gap: 30px;
-  width: fit-content;
-  height: 30%;
-}
-
-.button-container button {
-  background-color: transparent;
-  height: 7rem;
-  color: white;
-  border: 4px solid white;
-  font-size: 2rem;
-  transition: transform 0.4s ease;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 400px;
-  padding: 2rem;
-}
-
-.button-container button:hover {
-  transform: scale(1.05);
-  color: #fdea4f;
-  border: 4px solid #fdea4f;
-}
-
-.button-container .quit:hover {
-  color: red;
-  border: 4px solid red;
-}
-
 @keyframes game-over-appearing {
   from {
     opacity: 0;
@@ -70,3 +6,24 @@
     opacity: 1;
   }
 }
+
+.game-over {
+  background-color: rgba(0, 0, 0, 0.65);
+  backdrop-filter: blur(4px);
+
+  animation: game-over-appearing 0.5s ease-out;
+}
+
+.screen-choices h1.title-red {
+  color: red;
+}
+
+.screen-choices h1.title-green {
+  color: green;
+}
+
+.button-container .quit:hover {
+  color: red;
+  border: 4px solid red;
+}
+
