--- a/css/menu.css
+++ b/css/menu.css
@@ -21,7 +21,7 @@
 
   image-rendering: pixelated;
   background-size: 200%;
-  background-image: url('../assets/images/anim_background.png');
+  background-image: url('../assets/images/map-1.png');
 
   animation: bg-animation 5s infinite;
 }
