--- a/css/index.css
+++ b/css/index.css
@@ -23,17 +23,8 @@ body {
   overscroll-behavior: none;
   font-family: 'Slkscr', sans-serif;
   font-weight: 100;
-  cursor: none;
   overflow: hidden;
   user-select: none;
-}
-
-.cursor {
-  z-index: 99999;
-  width: 20px;
-  height: 20px;
-  position: fixed;
-  pointer-events: none;
 }
 
 #wanned {
@@ -80,9 +71,9 @@ body {
   top: 0;
   left: 0;
   background: radial-gradient(
-          circle,
-          rgba(0, 0, 0, 0) 0%,
-          rgba(255, 0, 0, 0.9) 70% /*rgba(0, 0, 0, 0.9) 70%*/
+    circle,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(255, 0, 0, 0.9) 70% /*rgba(0, 0, 0, 0.9) 70%*/
   );
   opacity: 1;
   filter: brightness(0);
@@ -94,7 +85,8 @@ body {
   animation: damages 2000ms linear;
 }
 
-#fog.fade-in:after, #fog.fade-out:after {
+#fog.fade-in:after,
+#fog.fade-out:after {
   content: '';
   position: absolute;
   top: 0;
@@ -128,9 +120,9 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   background: radial-gradient(
-          circle,
-          rgba(0, 0, 0, 0) 0%,
-          rgba(255, 255, 255, 0.3) 80%
+    circle,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(255, 255, 255, 0.3) 80%
   );
   border-radius: 50%;
   filter: blur(40px);
@@ -140,4 +132,43 @@ body {
 
 #light.hidden {
   opacity: 0;
+}
+
+#mobile-not-available {
+  z-index: 999;
+  background: black;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  line-height: 1.5em;
+  text-align: center;
+}
+
+#mobile-not-available h2 {
+  color: white;
+}
+
+@media (min-width: 1024px) {
+  html,
+  body {
+    cursor: none;
+  }
+
+  .cursor {
+    z-index: 99999;
+    width: 20px;
+    height: 20px;
+    position: fixed;
+    pointer-events: none;
+  }
+
+  #mobile-not-available {
+    display: none;
+  }
 }
