--- a/css/screen-choices.css
+++ b/css/screen-choices.css
@@ -1,66 +1,80 @@
 :root {
-    --button-hover-color: #fdea4f;
+  --button-hover-color: #fdea4f;
 }
 
 .screen-choices {
-    position: absolute;
-    z-index: 102;
-    
-    width: 100%;
-    height: 100%;
-    
-    color: white;
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  position: absolute;
+  z-index: 102;
+
+  width: 100%;
+  height: 100%;
+
+  color: white;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.screen-choices h1.title-red {
+  color: red;
+}
+
+.screen-choices h1.title-green {
+  color: green;
+}
+
+.button-container .quit:hover {
+  color: red;
+  border: 4px solid red;
 }
 
 .screen-choices h1 {
-    padding: 3rem;
-    font-size: 8rem;
-    font-family: 'Press Start 2P', cursive;
-    text-align: center;
+  padding: 3rem;
+  font-size: 8rem;
+  font-family: 'Press Start 2P', cursive;
+  text-align: center;
+  text-shadow: 0.7rem 0 0 #dddddd;
 }
 
 .screen-choices button {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 .choices-buttons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 
-    gap: 2rem;
+  gap: 2rem;
 }
 
 .choices-buttons.hide {
-    display: none;
+  display: none;
 }
 
 .choice-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    background-color: transparent;
+  background-color: transparent;
 
-    color: white;
-    border: 4px solid white;
+  color: white;
+  border: 4px solid white;
 
-    transition: transform 0.4s ease;
+  transition: transform 0.4s ease;
 
-    width: fit-content;
-    min-width: 100%;
-    padding: 1.5rem;
+  width: fit-content;
+  min-width: 100%;
+  padding: 1.5rem;
 }
 
 .choice-button:hover {
-    transform: scale(1.05);
+  transform: scale(1.05);
 
-    color: var(--button-hover-color);
-    border: 4px solid var(--button-hover-color);
+  color: var(--button-hover-color);
+  border: 4px solid var(--button-hover-color);
 }
