--- a/css/index.css
+++ b/css/index.css
@@ -172,3 +172,63 @@ body {
     display: none;
   }
 }
+
+.audio {
+  display: flex;
+  justify-content: flex-end;
+  position: absolute;
+  inset: 1rem;
+  z-index: 2;
+}
+
+.bar {
+  height: 20px;
+  width: 2px;
+  margin-right: 6px;
+
+  background: white;
+
+  animation-name: grow;
+  animation-duration: 2s;
+
+  animation-iteration-count: infinite;
+}
+
+.bar:nth-child(2) {
+  animation-delay: 0.3s;
+}
+
+.bar:nth-child(3) {
+  animation-delay: 0.6s;
+}
+
+.bar:nth-child(4) {
+  animation-delay: 0.3s;
+}
+
+.bar:nth-child(5) {
+  animation-delay: 0.8s;
+}
+
+.bar:nth-child(6) {
+  animation-delay: 0.3s;
+}
+
+@keyframes grow {
+  0% {
+    transform: scaleY(0.3);
+  }
+  50% {
+    transform: scaleY(1);
+  }
+  100% {
+    transform: scaleY(0.3);
+  }
+}
+
+.bar.hide {
+  height: 5px;
+  margin-top: 7px;
+
+  animation-iteration-count: 0;
+}
