fix: improve mobile detection

--- a/css/index.css
+++ b/css/index.css
@@ -25,6 +25,7 @@ body {
   font-weight: 100;
   overflow: hidden;
   user-select: none;
+  position: relative;
 }
 
 #wanned {
@@ -150,27 +151,12 @@ body {
   text-align: center;
 }
 
-#mobile-not-available h2 {
-  color: white;
+#mobile-not-available.hidden {
+  display: none;
 }
 
-@media (min-width: 1024px) {
-  html,
-  body {
-    cursor: none;
-  }
-
-  .cursor {
-    z-index: 99999;
-    width: 20px;
-    height: 20px;
-    position: fixed;
-    pointer-events: none;
-  }
-
-  #mobile-not-available {
-    display: none;
-  }
+#mobile-not-available h2 {
+  color: white;
 }
 
 .audio {
