--- a/css/index.css
+++ b/css/index.css
@@ -26,6 +26,7 @@ body {
   overflow: hidden;
   user-select: none;
   position: relative;
+  cursor: none;
 }
 
 #wanned {
@@ -135,8 +136,16 @@ body {
   opacity: 0;
 }
 
+.cursor {
+  z-index: 99999;
+  width: 20px;
+  height: 20px;
+  position: fixed;
+  pointer-events: none;
+}
+
 #mobile-not-available {
-  z-index: 999;
+  z-index: 99999;
   background: black;
   position: absolute;
   height: 100%;
