feat: easter eggs

--- a/css/index.css
+++ b/css/index.css
@@ -170,10 +170,12 @@ body {
 
 .audio {
   display: flex;
-  justify-content: flex-end;
   position: absolute;
-  inset: 1rem;
+  right: 0;
+  margin: 1rem 1rem 0 0;
   z-index: 2;
+  width: 40px;
+  height: 25px;
 }
 
 .bar {
