--- a/css/bubbles.css
+++ b/css/bubbles.css
@@ -3,13 +3,14 @@
   user-select: none;
   width: 50%;
   height: 70%;
-  background-color: #251319;
+  background-color: black;
   position: absolute;
   bottom: 50%;
   left: 25%;
   z-index: 2;
-
+  border-radius: 8px;
   transform: translateY(50%);
+  border: solid 5px white;
 }
 
 .score {
@@ -17,7 +18,7 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 .bubbles-container h3 {
@@ -36,10 +37,11 @@
   position: absolute;
   border-radius: 300px;
   object-fit: cover;
-  background: rgba(255, 166, 0, 0.612);
+  background: rgba(255, 255, 255, 0.6);
   animation: bubble-moving-up 8s forwards;
   filter: hue-rotate(0deg);
   z-index: 99;
+  border: solid 3px white;
 }
 
 @keyframes bubble-moving-up {
